# serializer version: 1
# name: test_zensical_features[no_pypi-private]
  '''
  [project]
  site_name = "PKFire"
  site_description = "Onett Little League"
  site_author = "Ness"
  copyright = "&copy; 1995 Ness"
  
  nav = [
    { "Home" = [
      { "Overview" = "index.md" },
      { "License" = "license.md" },
    ] },
    { "API Reference" = "api.md" },
    { "Development" = [
      { "Contributing" = "contributing.md" },
      { "Maintaining" = "maintaining.md" },
    ] },
  ]
  
  # ----------------------------------------------------------------------------
  # Theme
  # ----------------------------------------------------------------------------
  [project.theme]
  language = "en"
  features = [
      "content.code.annotate",
      "content.code.copy",
      "content.tooltips",
      "navigation.expand",
      "navigation.footer",
      "navigation.instant",
      "navigation.path",
      "navigation.sections",
      "navigation.tabs",
      "navigation.tabs.sticky",
      "navigation.top",
      "search.highlight",
      "toc.follow",
  ]
  
  [project.theme.icon]
  logo = "lucide/sparkles"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme)"
  toggle.icon = "material/brightness-auto"
  toggle.name = "Switch to light mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: light)"
  scheme = "default"
  primary = "teal"
  accent = "purple"
  toggle.icon = "material/weather-sunny"
  toggle.name = "Switch to dark mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: dark)"
  scheme = "slate"
  primary = "black"
  accent = "lime"
  toggle.icon = "material/weather-night"
  toggle.name = "Switch to system preference"
  
  # ----------------------------------------------------------------------------
  # Markdown extensions
  # ----------------------------------------------------------------------------
  [project.markdown_extensions.admonition]
  
  [project.markdown_extensions.attr_list]
  
  [project.markdown_extensions.def_list]
  
  [project.markdown_extensions.footnotes]
  
  [project.markdown_extensions.md_in_html]
  
  [project.markdown_extensions.toc]
  permalink = true
  
  [project.markdown_extensions.pymdownx.details]
  
  [project.markdown_extensions.pymdownx.highlight]
  
  [project.markdown_extensions.pymdownx.inlinehilite]
  
  [project.markdown_extensions.pymdownx.snippets]
  base_path = ["."]
  check_paths = true
  
  [project.markdown_extensions.pymdownx.superfences]
  
  [project.markdown_extensions.pymdownx.tabbed]
  alternate_style = true
  
  [project.markdown_extensions.pymdownx.tasklist]
  custom_checkbox = true
  
  # ----------------------------------------------------------------------------
  # Plugins
  # ----------------------------------------------------------------------------
  [project.plugins.mkdocstrings.handlers.python]
  paths = ["."]
  inventories = ["https://docs.python.org/3/objects.inv"]
  
  [project.plugins.mkdocstrings.handlers.python.options]
  docstring_section_style = "list"
  filters = "public"
  heading_level = 1
  merge_init_into_class = true
  separate_signature = true
  show_root_heading = true
  show_root_full_path = false
  show_signature_annotations = true
  show_source = true
  show_symbol_type_heading = true
  show_symbol_type_toc = true
  
  '''
# ---
# name: test_zensical_features[no_pypi-public]
  '''
  [project]
  site_name = "PKFire"
  site_description = "Onett Little League"
  site_author = "Ness"
  site_url = "https://ness.github.io/PKFire"
  repo_url = "https://github.com/ness/PKFire"
  repo_name = "ness/PKFire"
  copyright = "&copy; 1995 Ness"
  
  nav = [
    { "Home" = [
      { "Overview" = "index.md" },
      { "License" = "license.md" },
    ] },
    { "API Reference" = "api.md" },
    { "Development" = [
      { "Contributing" = "contributing.md" },
      { "Maintaining" = "maintaining.md" },
    ] },
  ]
  
  # ----------------------------------------------------------------------------
  # Theme
  # ----------------------------------------------------------------------------
  [project.theme]
  language = "en"
  features = [
      "content.code.annotate",
      "content.code.copy",
      "content.tooltips",
      "navigation.expand",
      "navigation.footer",
      "navigation.instant",
      "navigation.path",
      "navigation.sections",
      "navigation.tabs",
      "navigation.tabs.sticky",
      "navigation.top",
      "search.highlight",
      "toc.follow",
  ]
  
  [project.theme.icon]
  logo = "lucide/sparkles"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme)"
  toggle.icon = "material/brightness-auto"
  toggle.name = "Switch to light mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: light)"
  scheme = "default"
  primary = "teal"
  accent = "purple"
  toggle.icon = "material/weather-sunny"
  toggle.name = "Switch to dark mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: dark)"
  scheme = "slate"
  primary = "black"
  accent = "lime"
  toggle.icon = "material/weather-night"
  toggle.name = "Switch to system preference"
  
  [[project.extra.social]]
  icon = "fontawesome/brands/github"
  link = "https://github.com/ness/PKFire"
  
  # ----------------------------------------------------------------------------
  # Markdown extensions
  # ----------------------------------------------------------------------------
  [project.markdown_extensions.admonition]
  
  [project.markdown_extensions.attr_list]
  
  [project.markdown_extensions.def_list]
  
  [project.markdown_extensions.footnotes]
  
  [project.markdown_extensions.md_in_html]
  
  [project.markdown_extensions.toc]
  permalink = true
  
  [project.markdown_extensions.pymdownx.details]
  
  [project.markdown_extensions.pymdownx.highlight]
  
  [project.markdown_extensions.pymdownx.inlinehilite]
  
  [project.markdown_extensions.pymdownx.snippets]
  base_path = ["."]
  check_paths = true
  
  [project.markdown_extensions.pymdownx.superfences]
  
  [project.markdown_extensions.pymdownx.tabbed]
  alternate_style = true
  
  [project.markdown_extensions.pymdownx.tasklist]
  custom_checkbox = true
  
  # ----------------------------------------------------------------------------
  # Plugins
  # ----------------------------------------------------------------------------
  [project.plugins.mkdocstrings.handlers.python]
  paths = ["."]
  inventories = ["https://docs.python.org/3/objects.inv"]
  
  [project.plugins.mkdocstrings.handlers.python.options]
  docstring_section_style = "list"
  filters = "public"
  heading_level = 1
  merge_init_into_class = true
  separate_signature = true
  show_root_heading = true
  show_root_full_path = false
  show_signature_annotations = true
  show_source = true
  show_symbol_type_heading = true
  show_symbol_type_toc = true
  
  '''
# ---
# name: test_zensical_features[pypi-private]
  '''
  [project]
  site_name = "PKFire"
  site_description = "Onett Little League"
  site_author = "Ness"
  copyright = "&copy; 1995 Ness"
  
  nav = [
    { "Home" = [
      { "Overview" = "index.md" },
      { "License" = "license.md" },
    ] },
    { "API Reference" = "api.md" },
    { "Development" = [
      { "Contributing" = "contributing.md" },
      { "Maintaining" = "maintaining.md" },
    ] },
  ]
  
  # ----------------------------------------------------------------------------
  # Theme
  # ----------------------------------------------------------------------------
  [project.theme]
  language = "en"
  features = [
      "content.code.annotate",
      "content.code.copy",
      "content.tooltips",
      "navigation.expand",
      "navigation.footer",
      "navigation.instant",
      "navigation.path",
      "navigation.sections",
      "navigation.tabs",
      "navigation.tabs.sticky",
      "navigation.top",
      "search.highlight",
      "toc.follow",
  ]
  
  [project.theme.icon]
  logo = "lucide/sparkles"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme)"
  toggle.icon = "material/brightness-auto"
  toggle.name = "Switch to light mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: light)"
  scheme = "default"
  primary = "teal"
  accent = "purple"
  toggle.icon = "material/weather-sunny"
  toggle.name = "Switch to dark mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: dark)"
  scheme = "slate"
  primary = "black"
  accent = "lime"
  toggle.icon = "material/weather-night"
  toggle.name = "Switch to system preference"
  
  # ----------------------------------------------------------------------------
  # Markdown extensions
  # ----------------------------------------------------------------------------
  [project.markdown_extensions.admonition]
  
  [project.markdown_extensions.attr_list]
  
  [project.markdown_extensions.def_list]
  
  [project.markdown_extensions.footnotes]
  
  [project.markdown_extensions.md_in_html]
  
  [project.markdown_extensions.toc]
  permalink = true
  
  [project.markdown_extensions.pymdownx.details]
  
  [project.markdown_extensions.pymdownx.highlight]
  
  [project.markdown_extensions.pymdownx.inlinehilite]
  
  [project.markdown_extensions.pymdownx.snippets]
  base_path = ["."]
  check_paths = true
  
  [project.markdown_extensions.pymdownx.superfences]
  
  [project.markdown_extensions.pymdownx.tabbed]
  alternate_style = true
  
  [project.markdown_extensions.pymdownx.tasklist]
  custom_checkbox = true
  
  # ----------------------------------------------------------------------------
  # Plugins
  # ----------------------------------------------------------------------------
  [project.plugins.mkdocstrings.handlers.python]
  paths = ["."]
  inventories = ["https://docs.python.org/3/objects.inv"]
  
  [project.plugins.mkdocstrings.handlers.python.options]
  docstring_section_style = "list"
  filters = "public"
  heading_level = 1
  merge_init_into_class = true
  separate_signature = true
  show_root_heading = true
  show_root_full_path = false
  show_signature_annotations = true
  show_source = true
  show_symbol_type_heading = true
  show_symbol_type_toc = true
  
  '''
# ---
# name: test_zensical_features[pypi-public]
  '''
  [project]
  site_name = "PKFire"
  site_description = "Onett Little League"
  site_author = "Ness"
  site_url = "https://ness.github.io/PKFire"
  repo_url = "https://github.com/ness/PKFire"
  repo_name = "ness/PKFire"
  copyright = "&copy; 1995 Ness"
  
  nav = [
    { "Home" = [
      { "Overview" = "index.md" },
      { "License" = "license.md" },
    ] },
    { "API Reference" = "api.md" },
    { "Development" = [
      { "Contributing" = "contributing.md" },
      { "Maintaining" = "maintaining.md" },
    ] },
  ]
  
  # ----------------------------------------------------------------------------
  # Theme
  # ----------------------------------------------------------------------------
  [project.theme]
  language = "en"
  features = [
      "content.code.annotate",
      "content.code.copy",
      "content.tooltips",
      "navigation.expand",
      "navigation.footer",
      "navigation.instant",
      "navigation.path",
      "navigation.sections",
      "navigation.tabs",
      "navigation.tabs.sticky",
      "navigation.top",
      "search.highlight",
      "toc.follow",
  ]
  
  [project.theme.icon]
  logo = "lucide/sparkles"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme)"
  toggle.icon = "material/brightness-auto"
  toggle.name = "Switch to light mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: light)"
  scheme = "default"
  primary = "teal"
  accent = "purple"
  toggle.icon = "material/weather-sunny"
  toggle.name = "Switch to dark mode"
  
  [[project.theme.palette]]
  media = "(prefers-color-scheme: dark)"
  scheme = "slate"
  primary = "black"
  accent = "lime"
  toggle.icon = "material/weather-night"
  toggle.name = "Switch to system preference"
  
  [[project.extra.social]]
  icon = "fontawesome/brands/github"
  link = "https://github.com/ness/PKFire"
  
  [[project.extra.social]]
  icon = "fontawesome/brands/python"
  link = "https://pypi.org/project/PKFire/"
  
  # ----------------------------------------------------------------------------
  # Markdown extensions
  # ----------------------------------------------------------------------------
  [project.markdown_extensions.admonition]
  
  [project.markdown_extensions.attr_list]
  
  [project.markdown_extensions.def_list]
  
  [project.markdown_extensions.footnotes]
  
  [project.markdown_extensions.md_in_html]
  
  [project.markdown_extensions.toc]
  permalink = true
  
  [project.markdown_extensions.pymdownx.details]
  
  [project.markdown_extensions.pymdownx.highlight]
  
  [project.markdown_extensions.pymdownx.inlinehilite]
  
  [project.markdown_extensions.pymdownx.snippets]
  base_path = ["."]
  check_paths = true
  
  [project.markdown_extensions.pymdownx.superfences]
  
  [project.markdown_extensions.pymdownx.tabbed]
  alternate_style = true
  
  [project.markdown_extensions.pymdownx.tasklist]
  custom_checkbox = true
  
  # ----------------------------------------------------------------------------
  # Plugins
  # ----------------------------------------------------------------------------
  [project.plugins.mkdocstrings.handlers.python]
  paths = ["."]
  inventories = ["https://docs.python.org/3/objects.inv"]
  
  [project.plugins.mkdocstrings.handlers.python.options]
  docstring_section_style = "list"
  filters = "public"
  heading_level = 1
  merge_init_into_class = true
  separate_signature = true
  show_root_heading = true
  show_root_full_path = false
  show_signature_annotations = true
  show_source = true
  show_symbol_type_heading = true
  show_symbol_type_toc = true
  
  '''
# ---
